--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>SzB</title>
+    <title>KB</title>
   </head>
   <body>
     <main>
@@ -196,7 +196,7 @@
           </p>
         </aside>
       </article>
-      <footer class="text-center"><h5>Szöllősi Bálint</h5></footer>
+      <footer class="text-center"><h5>Képiró Balázs</h5></footer>
     </main>
   </body>
 </html>
