Admin es merettablazat

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Free Web tutorials" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="projektfeladat" />
+    <meta name="keywords" content="Póló, Vicces póló" />
     <meta name="author" content="John Doe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -49,7 +49,7 @@
             <div class="card-header text-success">Retro gamer férfi póló</div>
             <div class="card-body">
               <img src="kepek/polo1.jpg" alt="polo" />
-              <div class="meretgrid">
+              <div>
                 <p>S</p>
                 <p>M</p>
                 <p>L</p>
@@ -72,7 +72,7 @@
             <div class="card-header text-success">Túléltem még egy meetinget</div>
             <div class="card-body">
               <img src="kepek/polo2.jpg" alt="polo" />
-              <div class="meretgrid">
+              <div>
                 <p>S</p>
                 <p>M</p>
                 <p>L</p>
@@ -95,7 +95,7 @@
             <div class="card-header text-success">Az éveim múlásával</div>
             <div class="card-body">
               <img src="kepek/polo3.jpg" alt="polo" />
-              <div class="meretgrid">
+              <div>
                 <p>S</p>
                 <p>M</p>
                 <p>L</p>
@@ -118,7 +118,7 @@
             <div class="card-header text-success">I hate...</div>
             <div class="card-body">
               <img src="kepek/polo4.jpg" alt="polo" />
-              <div class="meretgrid">
+              <div>
                 <p>S</p>
                 <p>M</p>
                 <p>L</p>
