--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+
+    <script type="module" src="main.js"></script>
     <title>KB</title>
   </head>
   <body>
@@ -45,121 +47,10 @@
           </div>
         </aside>
         <section class="col-lg-8 row">
-          <div class="card">
-            <div class="card-header text-success">Retro gamer férfi póló</div>
-            <div class="card-body">
-              <img src="kepek/polo1.jpg" alt="polo" />
-              <div>
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
-                <p>XXL</p>
-              </div>
-              <p>
-                A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd
-                ki, így vigyázva a 100% pamut szövet és a nyomat minőségére. ...
-              </p>
-            </div>
-            <div class="card-footer">
-              <p>Ár: 6990Ft</p>
-              <div class="btn btn-primary btn-block">
-                <p>kosárba</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header text-success">Túléltem még egy meetinget</div>
-            <div class="card-body">
-              <img src="kepek/polo2.jpg" alt="polo" />
-              <div>
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
-                <p>XXL</p>
-              </div>
-              <p>
-                Legnépszerűbb prémium pólónk, ami garantáltan a kedvenced lesz!
-                ...
-              </p>
-            </div>
-            <div class="card-footer">
-              <p>Ár: 6990Ft</p>
-              <div class="btn btn-primary btn-block">
-                <p>kosárba</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header text-success">Az éveim múlásával</div>
-            <div class="card-body">
-              <img src="kepek/polo3.jpg" alt="polo" />
-              <div>
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
-                <p>XXL</p>
-              </div>
-              <p>
-                A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd
-                ki, így vigyázva a 100% pamut szövet és a nyomat minőségére. ...
-              </p>
-            </div>
-            <div class="card-footer">
-              <p>Ár: 6990Ft</p>
-              <div class="btn btn-primary btn-block">
-                <p>kosárba</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header text-success">I hate...</div>
-            <div class="card-body">
-              <img src="kepek/polo4.jpg" alt="polo" />
-              <div>
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
-                <p>XXL</p>
-              </div>
-              <p>
-                A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd
-                ki, így vigyázva a 100% pamut szövet és a nyomat minőségére. ...
-              </p>
-            </div>
-            <div class="card-footer">
-              <p>Ár: 6990Ft</p>
-              <div class="btn btn-primary btn-block">
-                <p>kosárba</p>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header text-success">Képzeld el az életet</div>
-            <div class="card-body">
-              <img class="img-fluid" src="kepek/polo5.jpg" alt="polo" />
-              <div class="">
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
-                <p>XXL</p>
-              </div>
-              <p>
-                A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd
-                ki, így vigyázva a 100% pamut szövet és a nyomat minőségére. ...
-              </p>
-            </div>
-            <div class="card-footer">
-              <p>Ár: 6990Ft</p>
-              <div class="btn btn-primary btn-block">
-                <p>kosárba</p>
-              </div>
-            </div> 
-          </div>
+          
+        <div class="termekek">
+
+        </div>
         </section>
         <aside  class="col-lg-2">
           <h3>Kapcsolódó cikkek 1</h3>
