Kosar gomb hozzaadasa

--- a/index.html
+++ b/index.html
@@ -42,23 +42,15 @@
             <input type="range" min="0" max="6990" value="50" class="slider" />
           </div>
           <div class="dropdown">
-            <button
-              type="button"
-              class="btn btn-primary dropdown-toggle"
-              data-bs-toggle="dropdown"
-            >
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
               Dropdown button
             </button>
             <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item nevSzerint" href="#">Név szerint</a>
-              </li>
-              <li>
-                <a class="dropdown-item arSzerint" href="#">Ár szerint</a>
-              </li>
+              <li><a class="dropdown-item nevSzerint" href="#">Név szerint</a></li>
+              <li><a class="dropdown-item arSzerint" href="#">Ár szerint</a></li>
             </ul>
           </div>
-          <button type="button" class="crab">szortirozás</button>
+          <p class="crab">🦀</p>
         </aside>
         <section class="col-lg-8 row">
           <div class="termekek"></div>
