--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="John Doe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script type="module" src="main.js"></script>
@@ -46,7 +47,7 @@
               Dropdown button
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item nevSzerint" href="#">Név szerint</a></li>
+              <li><a class="dropdown-item nevSzerint" href="#">Név szerint növekvő</a></li>
               <li><a class="dropdown-item arSzerint" href="#">Ár szerint</a></li>
             </ul>
           </div>
