Elet az agyhalal utan, avagy minden is jo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link active" href="index.html">Kezdőlap</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="merettablazat.html">Mérettáblázat</a>
+              <a class="nav-link" href="kosar.html">Kosár</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="admin.html">Admin</a>
@@ -39,7 +39,7 @@
           <p>A termék neve:</p>
           <input type="text" class="in" placeholder="A termék neve" />
           <div class="slidecontainer">
-            <p>Szűrés ár szerint:</p>
+            <p>Szűrés ár szerint növekvő:</p>
             <input type="range" min="0" max="6990" value="50" class="slider" />
           </div>
           <div class="dropdown">
@@ -51,10 +51,9 @@
               <li><a class="dropdown-item arSzerint" href="#">Ár szerint</a></li>
             </ul>
           </div>
-          <p class="crab">🦀</p>
         </aside>
-        <section class="col-lg-8 row">
-          <div class="termekek"></div>
+        <section class="col-lg-8">
+          <div class="termekek row"></div>
         </section>
         <aside class="col-lg-2">
           <h3>Kapcsolódó cikkek 1</h3>
